--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this is a test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/misclicked/npm-test/issues"
   },
-  "homepage": "https://github.com/misclicked/npm-test#readme"
+  "homepage": "https://github.com/misclicked/npm-test#readme",
+  "dependencies": {
+    "through2-map": "^3.0.0"
+  }
 }
